Updates to LoD skill list

--- a/scripts/kv/abilities.kv
+++ b/scripts/kv/abilities.kv
@@ -221,6 +221,9 @@
 		"phantom_lancer_doppelwalk"	"1"
 		"phantom_lancer_juxtapose"	"1"
 		"phantom_lancer_spirit_lance"	"1"
+        "phoenix_icarus_dive"   "1"
+        "phoenix_fire_spirits"   "1"
+        "phoenix_sun_ray"   "1"
 		"puck_illusory_orb"	"1"
 		"puck_phase_shift"	"1"
 		"puck_waning_rift"	"1"
@@ -410,6 +413,7 @@
 		"omniknight_guardian_angel"	"1"
 		"phantom_assassin_coup_de_grace"	"1"
 		"phantom_lancer_phantom_edge"	"1"
+        "phoenix_supernova"     "1"
 		"puck_dream_coil"	"1"
 		"pudge_dismember"	"1"
 		"pugna_life_drain"	"1"
@@ -434,7 +438,7 @@
 		"sven_gods_strength"	"1"
 		"templar_assassin_psionic_trap"	"1"
 		"tidehunter_ravage"	"1"
-		"tinker_rearm"	"1"
+		"tinker_rearm"	"0"
 		"tiny_grow"	"1"
 		"treant_overgrowth"	"1"
 		"troll_warlord_battle_trance"	"1"
