Disabled more broken skills

--- a/scripts/kv/abilities.kv
+++ b/scripts/kv/abilities.kv
@@ -26,6 +26,7 @@
 		"batrider_flamebreak"	"1"
 		"batrider_sticky_napalm"	"1"
 		"beastmaster_call_of_the_wild"	"1"
+		"beastmaster_call_of_the_wild_boar"	"1"
 		"beastmaster_inner_beast"	"1"
 		"beastmaster_wild_axes"	"1"
 		"bloodseeker_blood_bath"	"1"
@@ -45,7 +46,7 @@
 		"brewmaster_thunder_clap"	"0"
 		"bristleback_bristleback"	"1"
 		"bristleback_quill_spray"	"1"
-		"bristleback_viscous_nasal_goo"	"1"
+		"bristleback_viscous_nasal_goo"	"0"
 		"broodmother_incapacitating_bite"	"1"
 		"broodmother_spawn_spiderlings"	"1"
 		"broodmother_spin_web"	"1"
@@ -55,7 +56,7 @@
 		"chaos_knight_chaos_bolt"	"1"
 		"chaos_knight_chaos_strike"	"1"
 		"chaos_knight_reality_rift"	"1"
-		"chen_holy_persuasion"	"1"
+		"chen_holy_persuasion"	"0"
 		"chen_penitence"	"1"
 		"chen_test_of_faith"	"1"
 		"chen_test_of_faith_teleport"	"1"
@@ -73,7 +74,7 @@
 		"dazzle_shallow_grave"	"1"
 		"death_prophet_carrion_swarm"	"1"
 		"death_prophet_silence"	"1"
-		"death_prophet_witchcraft"	"1"
+		"death_prophet_witchcraft"	"0"
 		"disruptor_glimpse"	"1"
 		"disruptor_kinetic_field"	"1"
 		"disruptor_thunder_strike"	"1"
@@ -90,22 +91,22 @@
 		"earth_spirit_geomagnetic_grip"	"1"
 		"earth_spirit_magnetize"	"1"
 		"earth_spirit_rolling_boulder"	"1"
-		"earth_spirit_stone_caller"	"1"
+		"earth_spirit_stone_caller"	"0"
 		"earthshaker_aftershock"	"1"
 		"earthshaker_enchant_totem"	"1"
 		"earthshaker_fissure"	"1"
 		"elder_titan_ancestral_spirit"	"1"
 		"elder_titan_echo_stomp"	"1"
 		"elder_titan_natural_order"	"1"
-		"ember_spirit_activate_fire_remnant"	"1"
-		"ember_spirit_fire_remnant"	"1"
+		"ember_spirit_activate_fire_remnant"	"0"
+		"ember_spirit_fire_remnant"	"0"
 		"ember_spirit_flame_guard"	"1"
 		"ember_spirit_searing_chains"	"1"
 		"ember_spirit_sleight_of_fist"	"1"
 		"enchantress_enchant"	"1"
 		"enchantress_natures_attendants"	"1"
 		"enchantress_untouchable"	"1"
-		"enigma_demonic_conversion"	"1"
+		"enigma_demonic_conversion"	"0"
 		"enigma_malefice"	"1"
 		"enigma_midnight_pulse"	"1"
 		"faceless_void_backtrack"	"1"
@@ -151,7 +152,7 @@
 		"leshrac_diabolic_edict"	"1"
 		"leshrac_lightning_storm"	"1"
 		"leshrac_split_earth"	"1"
-		"lich_dark_ritual"	"1"
+		"lich_dark_ritual"	"0"		//no creeps 
 		"lich_frost_armor"	"1"
 		"lich_frost_nova"	"1"
 		"life_stealer_feast"	"1"
@@ -288,7 +289,7 @@
 		"storm_spirit_overload"	"1"
 		"storm_spirit_static_remnant"	"1"
 		"sven_great_cleave"	"1"
-		"sven_storm_bolt"	"1"
+		"sven_storm_bolt"	"0"
 		"sven_warcry"	"1"
 		"templar_assassin_meld"	"1"
 		"templar_assassin_psi_blades"	"1"
@@ -367,7 +368,7 @@
 		"centaur_stampede"	"1"
 		"chaos_knight_phantasm"	"1"
 		"chen_hand_of_god"	"1"
-		"clinkz_death_pact"	"1"
+		"clinkz_death_pact"	"0"
 		"crystal_maiden_freezing_field"	"1"
 		"dark_seer_wall_of_replica"	"1"
 		"dazzle_weave"	"1"
@@ -396,11 +397,11 @@
 		"lina_laguna_blade"	"1"
 		"lion_finger_of_death"	"1"
 		"lone_druid_true_form"	"0"
-		"luna_eclipse"	"1"
+		"luna_eclipse"	"0"
 		"lycan_shapeshift"	"1"
 		"magnataur_reverse_polarity"	"1"
 		"medusa_stone_gaze"	"1"
-		"meepo_divided_we_stand"	"1"
+		"meepo_divided_we_stand"	"0"
 		"mirana_invis"	"1"
 		"morphling_replicate"	"1"
 		"naga_siren_song_of_the_siren"	"1"
@@ -409,7 +410,7 @@
 		"night_stalker_darkness"	"1"
 		"nyx_assassin_vendetta"	"1"
 		"obsidian_destroyer_sanity_eclipse"	"1"
-		"ogre_magi_multicast"	"1"
+		"ogre_magi_multicast"	"0"
 		"omniknight_guardian_angel"	"1"
 		"phantom_assassin_coup_de_grace"	"1"
 		"phantom_lancer_phantom_edge"	"1"
