Added terrorblade skills to LoD

--- a/scripts/kv/abilities.kv
+++ b/scripts/kv/abilities.kv
@@ -294,6 +294,9 @@
 		"templar_assassin_meld"	"1"
 		"templar_assassin_psi_blades"	"1"
 		"templar_assassin_refraction"	"1"
+        "terrorblade_reflection"    "1"
+        "terrorblade_conjure_image" "1"
+        "terrorblade_metamorphosis" "1"
 		"tidehunter_anchor_smash"	"1"
 		"tidehunter_gush"	"1"
 		"tidehunter_kraken_shell"	"1"
@@ -438,6 +441,7 @@
 		"storm_spirit_ball_lightning"	"1"
 		"sven_gods_strength"	"1"
 		"templar_assassin_psionic_trap"	"1"
+        "terrorblade_sunder"    "1"
 		"tidehunter_ravage"	"1"
 		"tinker_rearm"	"0"
 		"tiny_grow"	"1"
